Fix body/html height when content is too small on mobile. Uses svh now

--- a/assets/scss/admin.scss
+++ b/assets/scss/admin.scss
@@ -232,7 +232,7 @@ body.has-boxed-container .editor-styles-wrapper {
 	align-items: center;
 	justify-content: center;
 	width: 100dvw;
-	height: 100dvh;
+	height: 100svh;
 	text-align: center;
 	background: #f1f1f1;
 
